[package]
name = "cargo"
version = "0.21.0"
authors = ["Yehuda Katz <wycats@gmail.com>",
           "Carl Lerche <me@carllerche.com>",
           "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
homepage = "https://crates.io"
repository = "https://github.com/rust-lang/cargo"
documentation = "https://docs.rs/cargo"
description = """
Cargo, a package manager for Rust.
"""

[lib]
name = "cargo"
path = "src/cargo/lib.rs"

[dependencies]
crates-io = { path = "src/crates-io", version = "0.10" }
crossbeam = "0.2"
curl = "0.4.7"
docopt = "0.7"
env_logger = "0.4"
error-chain = "0.10.0"
filetime = "0.1"
flate2 = "0.2"
git2 = {version = "0.6", default-features = false}
git2-curl = "0.7"
glob = "0.2"
jobserver = { path = "/home/ian/Devel/src/redox/cookbook/jobserver-rs" }
libc = "0.2"
libgit2-sys = "0.6"
log = "0.3"
num_cpus = "1.0"
rustc-serialize = "0.3"
scoped-tls = "0.1"
semver = { version = "0.7.0", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_ignored = "0.0.3"
serde_json = "1.0"
shell-escape = "0.1"
tar = {git = "https://github.com/redox-os/tar-rs"}
tempdir = "0.3"
term = "0.4.4"
toml = "0.4"
url = "1.1"

[target.'cfg(any(unix, target_os = "redox"))'.dependencies]
openssl = "0.9"

[target.'cfg(windows)'.dependencies]
advapi32-sys = "0.2"
kernel32-sys = "0.2"
miow = "0.2"
psapi-sys = "0.1"
winapi = "0.2"

[dev-dependencies]
bufstream = "0.1"
cargotest = { path = "tests/cargotest" }
filetime = "0.1"
hamcrest = "=0.1.1"

[[bin]]
name = "cargo"
test = false
doc = false

[replace]
"thread-id:3.1.0" = {path = "/home/ian/Devel/src/redox/thread-id" }
"filetime:0.1.10" = { path = "/home/ian/Devel/src/redox/cookbook/filetime" }
"curl-sys:0.3.13" = { path = "/home/ian/Devel/src/redox/cookbook/curl-rust/curl-sys" }
"curl:0.4.7" = { path = "/home/ian/Devel/src/redox/cookbook/curl-rust" }
"libgit2-sys:0.6.12" = {path = "/home/ian/Devel/src/redox/cookbook/git2-rs/libgit2-sys"}
"git2:0.6.6" = {path = "/home/ian/Devel/src/redox/cookbook/git2-rs"}
